[package]
name = "dotdotvote"
version = "0.1.0"
authors = ["R. Tyler Croy <rtyler@brokenco.de>"]
edition = "2018"

[dependencies]
tide = "~0.13.0"
async-std = { version = "~1.6.0", features = ["attributes"] }
chrono = "0.4.15"
diesel = { version = "~1.4.5", features = ["chrono", "postgres", "r2d2", "uuidv07"] }
dotenv = "~0.15.0"
log = "~0.4.8"
pretty_env_logger = "~0.3.1"
r2d2 = "~0.8"
serde = { version = "~1.0.104", features = ["derive"] }
serde_json = "~1.0.0"
sqlx = { version = "~0.3.5", features = ["chrono", "json", "postgres", "tls", "uuid"] }
uuid = { version = "~0.8.1", features = ["v4", "serde"]}
