[package]
name = "dotdotvote"
version = "0.1.0"
authors = ["R. Tyler Croy <rtyler@brokenco.de>"]
edition = "2018"

[dependencies]
async-std = { version = "~1.6.0", features = ["attributes"] }
chrono = "0.4.15"
dotenv = "~0.15.0"
driftwood = "~0.0.3"
handlebars = { version = "~3.4.0", features = ["dir_source"] }
html-escape = "~0.2.6"
log = "~0.4.8"
pretty_env_logger = "~0.3.1"
serde = { version = "~1.0.104", features = ["derive"] }
serde_qs = "~0.7.0"
serde_json = "~1.0.0"
sqlx = { version = "~0.4.0-beta.1", features = ["chrono", "json", "offline", "postgres", "tls", "uuid"] }
tide = "~0.13.0"
uuid = { version = "~0.8.1", features = ["v4", "serde"]}
